minor doc and bug fixes

--- a/example/index.html
+++ b/example/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>flash demo</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../defaultTheme.css">
+        <link rel="stylesheet" href="../default.css">
         <link rel="stylesheet" href="page.css">
     </head>
     <body>
